change demo file and update Pretzel name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Pretzel Data",
-  "name": "Pretzel Data",
+  "short_name": "Pretzel",
+  "name": "Pretzel",
   "icons": [
     {
       "src": "favicon.ico",
