--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "type": "module",
   "dependencies": {
     "@blueprintjs/table": "^5.1.2",
     "@duckdb/duckdb-wasm": "^1.28.1-dev106.0",
@@ -19,14 +20,13 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/echarts": "^4.9.22",
-    "@types/node": "^16.18.86",
     "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/react-dom": "^18.2.22",
     "apache-arrow": "^15.0.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "echarts": "^5.5.0",
+    "echarts": "^4.5.0",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
@@ -38,7 +38,6 @@
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.0.12",
     "react-responsive-carousel": "^3.2.23",
-    "react-scripts": "5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
@@ -47,8 +46,9 @@
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -69,12 +69,19 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@craco/craco": "^7.1.0",
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^18.19.24",
     "@types/papaparse": "^5.3.14",
     "@types/react-resizable": "^3.0.7",
     "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.18",
     "source-map-loader": "^5.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.6",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
