--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "echarts": "^4.5.0",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
+    "json-2-csv": "^5.5.1",
     "lodash": "^4.17.21",
     "marked": "^12.0.1",
     "posthog-js": "^1.112.0",
