--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "comlink": "^4.4.1",
     "echarts": "^4.5.0",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
