--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@blueprintjs/table": "^5.1.2",
     "@codemirror/lang-python": "^6.1.4",
     "@duckdb/duckdb-wasm": "^1.28.1-dev106.0",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -34,6 +35,7 @@
     "json-2-csv": "^5.5.1",
     "lodash": "^4.17.21",
     "marked": "^12.0.1",
+    "monaco-editor": "^0.47.0",
     "posthog-js": "^1.112.0",
     "prql-js": "^0.11.3",
     "pyodide": "^0.25.0",
