fix URLs in packages dir

--- a/packages/observables/package.json
+++ b/packages/observables/package.json
@@ -2,13 +2,13 @@
   "name": "@jupyterlab/observables",
   "version": "5.2.0-rc.0",
   "description": "Data structures which may be observed for changes.",
-  "homepage": "https://github.com/jupyterlab/jupyterlab",
+  "homepage": "https://github.com/pretzelai/pretzelai",
   "bugs": {
-    "url": "https://github.com/jupyterlab/jupyterlab/issues"
+    "url": "https://github.com/pretzelai/pretzelai/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jupyterlab/jupyterlab.git"
+    "url": "https://github.com/pretzelai/pretzelai.git"
   },
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
