--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -7,9 +7,9 @@
     "notebook",
     "services"
   ],
-  "homepage": "https://github.com/jupyterlab/jupyterlab",
+  "homepage": "https://github.com/pretzelai/pretzelai",
   "bugs": {
-    "url": "https://github.com/jupyterlab/jupyterlab/issues"
+    "url": "https://github.com/pretzelai/pretzelai/issues"
   },
   "repository": {
     "type": "git",
