--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -2,13 +2,13 @@
   "name": "@jupyterlab/coreutils",
   "version": "6.2.0-rc.0",
   "description": "JupyterLab - Core Utilities",
-  "homepage": "https://github.com/jupyterlab/jupyterlab",
+  "homepage": "https://github.com/pretzelai/pretzelai",
   "bugs": {
-    "url": "https://github.com/jupyterlab/jupyterlab/issues"
+    "url": "https://github.com/pretzelai/pretzelai/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jupyterlab/jupyterlab.git"
+    "url": "https://github.com/pretzelai/pretzelai.git"
   },
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
