--- a/packages/htmlviewer-extension/package.json
+++ b/packages/htmlviewer-extension/package.json
@@ -6,13 +6,13 @@
     "jupyter",
     "jupyterlab"
   ],
-  "homepage": "https://github.com/jupyterlab/jupyterlab",
+  "homepage": "https://github.com/pretzelai/pretzelai",
   "bugs": {
     "url": "https://github.com/jupyterlab/jupyterlab"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jupyterlab/jupyterlab.git"
+    "url": "https://github.com/pretzelai/pretzelai.git"
   },
   "license": "BSD-3-Clause",
   "author": "Project Jupyter Contributors",
