--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -2,13 +2,13 @@
   "name": "@jupyterlab/metapackage",
   "version": "4.2.0-rc.0",
   "description": "JupyterLab - Meta Package.  All of the packages used by the core JupyterLab application",
-  "homepage": "https://github.com/jupyterlab/jupyterlab",
+  "homepage": "https://github.com/pretzelai/pretzelai",
   "bugs": {
-    "url": "https://github.com/jupyterlab/jupyterlab/issues"
+    "url": "https://github.com/pretzelai/pretzelai/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jupyterlab/jupyterlab.git"
+    "url": "https://github.com/pretzelai/pretzelai.git"
   },
   "license": "BSD-3-Clause",
   "author": "Project Jupyter",
