--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,13 @@ requires = ["hatchling>=1.21.1"]
 build-backend = "hatchling.build"
 
 [project]
-name = "jupyterlab"
-description = "JupyterLab computational environment"
+name = "pretzel"
+description = "Pretzel is a fork of JupyterLab that improves the user experience of the JupyterLab computational environment."
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
-authors = [
-    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
-]
-keywords = [
-    "ipython",
-    "jupyter",
-]
+authors = [{ name = "Pretzel AI GmbH", email = "founders@pretzel.ai" }]
+keywords = ["ipython", "jupyter"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Framework :: Jupyter",
@@ -51,9 +46,7 @@ dependencies = [
     "tornado>=6.2.0",
     "traitlets",
 ]
-dynamic = [
-    "version",
-]
+dynamic = ["version"]
 
 [project.scripts]
 jlpm = "jupyterlab.jlpmapp:main"
@@ -66,13 +59,12 @@ readonly = "jupyterlab.extensions:get_readonly_manager"
 pypi = "jupyterlab.extensions:get_pypi_manager"
 
 [project.urls]
-Homepage = "https://jupyter.org"
-Changelog = "https://jupyterlab.readthedocs.io/en/stable/getting_started/changelog.html"
-Documentation = "https://jupyterlab.readthedocs.io"
-Source = "https://github.com/jupyterlab/jupyterlab"
-Issues = "https://github.com/jupyterlab/jupyterlab/issues/new/choose"
-Gitter = "https://gitter.im/jupyterlab/jupyterlab"
-Pypi = "https://pypi.org/project/jupyterlab"
+Homepage = "https://withpretzel.com"
+Changelog = "https://withpretzel.com/changelog"
+Documentation = "https://withpretzel.com/docs"
+Source = "https://github.com/pretzelai/pretzelai"
+Issues = "https://github.com/pretzelai/pretzelai/issues/new/choose"
+Pypi = "https://pypi.org/project/pretzelai"
 
 [project.optional-dependencies]
 docs = [
@@ -125,7 +117,7 @@ upgrade-extension = [
     "copier>=8,<10",
     "jinja2-time<0.3",
     "pydantic<2.0",
-    "tomli-w<2.0"
+    "tomli-w<2.0",
 ]
 
 [tool.check-wheel-contents]
@@ -160,7 +152,7 @@ include = [
     "/jupyterlab",
     "/package.json",
     "jupyterlab.svg",
-    "jupyterlab.desktop"
+    "jupyterlab.desktop",
 ]
 exclude = [
     "/.github",
@@ -181,18 +173,16 @@ exclude = [
     "/jupyterlab/staging/.yarn",
     "/packages",
     "/release",
-    "/testutils"
+    "/testutils",
 ]
 
 [tool.hatch.build.targets.wheel]
-include = [
-    "/jupyterlab",
-]
+include = ["/jupyterlab"]
 exclude = [
     "*.js.map",
     "/jupyterlab/staging/build",
     "/jupyterlab/staging/.yarn",
-    "node_modules"
+    "node_modules",
 ]
 
 [tool.hatch.build.hooks.jupyter-builder]
@@ -201,7 +191,7 @@ build-function = "buildapi.builder"
 ensured-targets = [
     "jupyterlab/static/package.json",
     "jupyterlab/schemas/@jupyterlab/shortcuts-extension/shortcuts.json",
-    "jupyterlab/themes/@jupyterlab/theme-light-extension/index.css"
+    "jupyterlab/themes/@jupyterlab/theme-light-extension/index.css",
 ]
 install-pre-commit-hook = true
 
@@ -231,14 +221,8 @@ release-message = "[ci skip] Publish {version}"
 tag-message = "[ci skip] Release {tag_name}"
 
 [tool.jupyter-releaser.hooks]
-before-bump-version = [
-    "pip install -e .[dev]",
-    "git checkout .",
-]
-before-build-npm = [
-    "jlpm",
-    "jlpm run build:all",
-]
+before-bump-version = ["pip install -e .[dev]", "git checkout ."]
+before-build-npm = ["jlpm", "jlpm run build:all"]
 before-build-python = [
     "node buildutils/lib/local-repository start",
     "jlpm run before:build:python",
@@ -250,21 +234,44 @@ after-publish-assets = "npm run after:publish:assets"
 target-version = "py38"
 line-length = 100
 lint.select = [
-  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "N",
-  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
-  "W", "YTT",
+    "A",
+    "B",
+    "C",
+    "DTZ",
+    "E",
+    "EM",
+    "F",
+    "FBT",
+    "I",
+    "ICN",
+    "N",
+    "PLC",
+    "PLE",
+    "PLR",
+    "PLW",
+    "Q",
+    "RUF",
+    "S",
+    "SIM",
+    "T",
+    "TID",
+    "UP",
+    "W",
+    "YTT",
 ]
 lint.ignore = [
-# Q000 Single quotes found but double quotes preferred
-"Q000",
-# FBT001 Boolean positional arg in function definition
-"FBT001", "FBT002", "FBT003",
-# E501 Line too long (158 > 100 characters)
-"E501",
-# PLR0913 Too many arguments to function call
-"PLR0913",
-# SIM105 Use `contextlib.suppress(...)`
-"SIM105",
+    # Q000 Single quotes found but double quotes preferred
+    "Q000",
+    # FBT001 Boolean positional arg in function definition
+    "FBT001",
+    "FBT002",
+    "FBT003",
+    # E501 Line too long (158 > 100 characters)
+    "E501",
+    # PLR0913 Too many arguments to function call
+    "PLR0913",
+    # SIM105 Use `contextlib.suppress(...)`
+    "SIM105",
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -299,7 +306,16 @@ lint.ignore = [
 # N802 Function name `foo` should be lowercase
 # EM101 Exception must not use a string literal
 # PLR2004 Magic value used in comparison
-"jupyterlab/tests/*" = ["C901", "S101", "N802", "E501", "EM101", "EM102", "EM103", "PLR2004"]
+"jupyterlab/tests/*" = [
+    "C901",
+    "S101",
+    "N802",
+    "E501",
+    "EM101",
+    "EM102",
+    "EM103",
+    "PLR2004",
+]
 # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
 "jupyterlab/tests/echo_kernel.py" = ["RUF012"]
 # T201 `print` found
@@ -309,7 +325,16 @@ lint.ignore = [
 # PLC1901 test can be simplified as an empty string is falsey
 # PLR1714 Consider merging multiple comparisons
 # PLR5501 Use `elif` instead of `else` then `if`, to reduce indentation
-"jupyterlab/semver.py" = ["C901", "EM101", "EM102", "N806", "N816", "PLC1901", "PLR1714", "PLR5501"]
+"jupyterlab/semver.py" = [
+    "C901",
+    "EM101",
+    "EM102",
+    "N806",
+    "N816",
+    "PLC1901",
+    "PLR1714",
+    "PLR5501",
+]
 # T201 `print` found
 "jupyterlab/upgrade_extension.py" = ["T201"]
 # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
