add pretzel command

--- a/packages/pretzelai-extension/tsconfig.json
+++ b/packages/pretzelai-extension/tsconfig.json
@@ -19,22 +19,15 @@
     "strictNullChecks": true,
     "target": "ES2018"
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "references": [
     {
       "path": "../application"
     },
     {
       "path": "../apputils"
-    },
-    {
-      "path": "../cells"
-    },
-    {
-      "path": "../codeeditor"
-    },
-    {
-      "path": "../completer"
     },
     {
       "path": "../notebook"
