--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -90,12 +90,18 @@
     "@azure/openai": "^1.0.0-beta.12",
     "@jupyterlab/application": "^4.2.0-rc.0",
     "@jupyterlab/apputils": "^4.3.0-rc.0",
+    "@jupyterlab/cells": "^4.2.0-rc.0",
     "@jupyterlab/notebook": "^4.2.0-rc.0",
+    "@jupyterlab/outputarea": "^4.2.0-rc.0",
+    "@jupyterlab/rendermime": "^4.2.0-rc.0",
     "@jupyterlab/services": "^7.2.0-rc.0",
     "@jupyterlab/settingregistry": "^4.2.0-rc.0",
+    "@jupyterlab/ui-components": "^4.2.0-rc.0",
+    "@lumino/widgets": "^2.3.2",
     "monaco-editor": "^0.47.0",
     "openai": "^4.38.0",
-    "posthog-js": "^1.130.2"
+    "posthog-js": "^1.130.2",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^4.2.0-rc.0",
