--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -60,6 +60,7 @@
     "endOfLine": "auto",
     "singleQuote": true,
     "trailingComma": "none",
+    "printWidth": 120,
     "overrides": [
       {
         "files": "package.json",
