--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -58,9 +58,9 @@
   "prettier": {
     "arrowParens": "avoid",
     "endOfLine": "auto",
+    "printWidth": 120,
     "singleQuote": true,
     "trailingComma": "none",
-    "printWidth": 120,
     "overrides": [
       {
         "files": "package.json",
@@ -92,6 +92,7 @@
     "@jupyterlab/application": "^4.2.0",
     "@jupyterlab/apputils": "^4.3.0",
     "@jupyterlab/cells": "^4.2.0",
+    "@jupyterlab/coreutils": "^6.2.0",
     "@jupyterlab/notebook": "^4.2.0",
     "@jupyterlab/outputarea": "^4.2.0",
     "@jupyterlab/rendermime": "^4.2.0",
