--- a/packages/pretzelai-extension/tsconfig.json
+++ b/packages/pretzelai-extension/tsconfig.json
@@ -17,11 +17,10 @@
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2018"
+    "target": "ES2018",
+    "skipLibCheck": true
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "references": [
     {
       "path": "../application"
