--- a/package.json
+++ b/package.json
@@ -110,6 +110,10 @@
     "yjs": "^13.5.40"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@typescript-eslint/eslint-plugin": "~6.13.2",
     "@typescript-eslint/parser": "~6.13.2",
     "eslint": "~8.55.0",
@@ -126,8 +130,10 @@
     "stylelint-prettier": "^4.0.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
     "lerna": "^7.1.4",
     "typedoc": "~0.25.12",
-    "typedoc-plugin-mdn-links": "^3.1.20"
+    "typedoc-plugin-mdn-links": "^3.1.20",
+    "typescript": "^5.4.5"
   }
 }
