--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -92,6 +92,7 @@
     "@jupyterlab/application": "^4.2.0",
     "@jupyterlab/apputils": "^4.3.0",
     "@jupyterlab/cells": "^4.2.0",
+    "@jupyterlab/codemirror": "^4.2.0",
     "@jupyterlab/coreutils": "^6.2.0",
     "@jupyterlab/notebook": "^4.2.0",
     "@jupyterlab/outputarea": "^4.2.0",
@@ -100,6 +101,8 @@
     "@jupyterlab/settingregistry": "^4.2.0",
     "@jupyterlab/ui-components": "^4.2.0",
     "@lumino/widgets": "^2.3.2",
+    "@mui/icons-material": "~5.15.18",
+    "@mui/material": "~5.15.18",
     "monaco-editor": "^0.47.0",
     "openai": "^4.38.0",
     "posthog-js": "^1.130.2",
