--- a/packages/pretzelai-extension/tsconfig.json
+++ b/packages/pretzelai-extension/tsconfig.json
@@ -20,7 +20,9 @@
     "target": "ES2018",
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "references": [
     {
       "path": "../application"
@@ -30,6 +32,9 @@
     },
     {
       "path": "../cells"
+    },
+    {
+      "path": "../codemirror"
     },
     {
       "path": "../coreutils"
