--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -31,7 +31,9 @@
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
     "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
     "src/**/*.{ts,tsx}",
-    "schema/*.json"
+    "schema/*.json",
+    "style/**/*.css",
+    "style/**/*.svg"
   ],
   "scripts": {
     "build": "tsc -b",
