Add sidepanel for AI questions (#92)
Co-authored-by: Ramon Garate <ramon@withpretzel.com>

--- a/packages/pretzelai-extension/tsconfig.json
+++ b/packages/pretzelai-extension/tsconfig.json
@@ -17,7 +17,8 @@
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2018"
+    "target": "ES2018",
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
