--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -31,7 +31,9 @@
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
     "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
     "src/**/*.{ts,tsx}",
-    "schema/*.json"
+    "schema/*.json",
+    "style/**/*.css",
+    "style/**/*.svg"
   ],
   "scripts": {
     "build": "tsc -b",
@@ -106,6 +108,8 @@
     "@jupyterlab/settingregistry": "^4.2.0",
     "@jupyterlab/ui-components": "^4.2.0",
     "@lumino/widgets": "^2.3.2",
+    "@mui/icons-material": "~5.15.18",
+    "@mui/material": "~5.15.18",
     "monaco-editor": "^0.47.0",
     "openai": "^4.38.0",
     "posthog-js": "^1.130.2",
