--- a/package.json
+++ b/package.json
@@ -123,14 +123,14 @@
     "eslint-plugin-react": "~7.33.2",
     "prettier": "~3.0.0",
     "stylelint": "^15.10.1",
-    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^13.0.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-csstree-validator": "^3.0.0",
     "stylelint-prettier": "^4.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "lerna": "^7.1.4",
     "typedoc": "~0.25.12",
     "typedoc-plugin-mdn-links": "^3.1.20",
