--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -108,6 +108,7 @@
     "@jupyterlab/services": "^7.2.0",
     "@jupyterlab/settingregistry": "^4.2.0",
     "@jupyterlab/ui-components": "^4.2.0",
+    "@lumino/commands": "^2.3.0",
     "@lumino/widgets": "^2.3.2",
     "@mui/icons-material": "~5.15.18",
     "@mui/material": "~5.15.18",
