--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,16 +49,16 @@ dependencies = [
 dynamic = ["version"]
 
 [project.scripts]
-jlpm = "jupyterlab.jlpmapp:main"
-pretzel = "jupyterlab.cli:main"
-pretzel-lab = "jupyterlab.labapp:main"                 # Changed from jupyter-lab to pretzel-lab
-jupyter-lab = "jupyterlab.labapp:main"
-jupyter-labextension = "jupyterlab.labextensions:main"
-jupyter-labhub = "jupyterlab.labhubapp:main"
+jlpm = "pretzelai.jlpmapp:main"
+pretzel = "pretzelai.cli:main"
+pretzel-lab = "pretzelai.labapp:main"                 # Changed from jupyter-lab to pretzel-lab
+jupyter-lab = "pretzelai.labapp:main"
+jupyter-labextension = "pretzelai.labextensions:main"
+jupyter-labhub = "pretzelai.labhubapp:main"
 
-[project.entry-points."jupyterlab.extension_manager_v1"]
-readonly = "jupyterlab.extensions:get_readonly_manager"
-pypi = "jupyterlab.extensions:get_pypi_manager"
+[project.entry-points."pretzelai.extension_manager_v1"]
+readonly = "pretzelai.extensions:get_readonly_manager"
+pypi = "pretzelai.extensions:get_pypi_manager"
 
 [project.urls]
 Homepage = "https://withpretzel.com"
@@ -126,16 +126,16 @@ upgrade-extension = [
 ignore = ["W002", "W004"]
 
 [tool.hatch.version]
-path = "jupyterlab/_version.py"
+path = "pretzelai/_version.py"
 source = "code"
 
 [tool.hatch.build.targets.wheel.shared-data]
-"jupyterlab/static" = "share/jupyter/lab/static"
-"jupyterlab/schemas" = "share/jupyter/lab/schemas"
-"jupyterlab/themes" = "share/jupyter/lab/themes"
+"pretzelai/static" = "share/jupyter/lab/static"
+"pretzelai/schemas" = "share/jupyter/lab/schemas"
+"pretzelai/themes" = "share/jupyter/lab/themes"
 "jupyter-config" = "etc/jupyter"
-"jupyterlab.svg" = "share/icons/hicolor/scalable/apps/jupyterlab.svg"
-"jupyterlab.desktop" = "share/applications/jupyterlab.desktop"
+"pretzelai.svg" = "share/icons/hicolor/scalable/apps/pretzelai.svg"
+"pretzelai.desktop" = "share/applications/pretzelai.desktop"
 
 [tool.hatch.build]
 ignore-vcs = true
@@ -151,10 +151,10 @@ include = [
     "/.dockerignore",
     "/galata",
     "/jupyter-config",
-    "/jupyterlab",
+    "/pretzelai",
     "/package.json",
-    "jupyterlab.svg",
-    "jupyterlab.desktop",
+    "pretzelai.svg",
+    "pretzelai.desktop",
 ]
 exclude = [
     "/.github",
@@ -171,19 +171,19 @@ exclude = [
     "/dev_mode",
     "/examples",
     "/galata/lib",
-    "/jupyterlab/staging/build",
-    "/jupyterlab/staging/.yarn",
+    "/pretzelai/staging/build",
+    "/pretzelai/staging/.yarn",
     "/packages",
     "/release",
     "/testutils",
 ]
 
 [tool.hatch.build.targets.wheel]
-include = ["/jupyterlab"]
+include = ["/pretzelai"]
 exclude = [
     "*.js.map",
-    "/jupyterlab/staging/build",
-    "/jupyterlab/staging/.yarn",
+    "/pretzelai/staging/build",
+    "/pretzelai/staging/.yarn",
     "node_modules",
 ]
 
@@ -191,9 +191,9 @@ exclude = [
 dependencies = ["hatch-jupyter-builder>=0.3.2"]
 build-function = "buildapi.builder"
 ensured-targets = [
-    "jupyterlab/static/package.json",
-    "jupyterlab/schemas/@jupyterlab/shortcuts-extension/shortcuts.json",
-    "jupyterlab/themes/@jupyterlab/theme-light-extension/index.css",
+    "pretzelai/static/package.json",
+    "pretzelai/schemas/@jupyterlab/shortcuts-extension/shortcuts.json",
+    "pretzelai/themes/@jupyterlab/theme-light-extension/index.css",
 ]
 install-pre-commit-hook = true
 
@@ -201,17 +201,17 @@ install-pre-commit-hook = true
 build_cmd = "build"
 source_dir = "packages"
 build_dir = "dev_mode/static"
-npm = ["node", "jupyterlab/staging/yarn.js"]
+npm = ["node", "pretzelai/staging/yarn.js"]
 
 [tool.hatch.build.hooks.jupyter-builder.build-kwargs]
 build_cmd = "build:prod:minimize"
-path = "jupyterlab/staging"
-source_dir = "jupyterlab/staging"
-build_dir = "jupyterlab/static"
+path = "pretzelai/staging"
+source_dir = "pretzelai/staging"
+build_dir = "pretzelai/static"
 npm = ["node", "yarn.js"]
 
 [tool.pytest.ini_options]
-testpaths = "jupyterlab/tests"
+testpaths = "pretzelai/tests"
 norecursedirs = "node_modules .git _build .ipynb_checkpoints"
 addopts = "--pdbcls=IPython.terminal.debugger:Pdb -v --junitxml=junit.xml"
 ignore = "tests examples"
@@ -292,23 +292,23 @@ lint.ignore = [
 # S105 Possible hardcoded password: `""`
 "galata/jupyter_server_test_config.py" = ["F821", "S104", "S105"]
 # T201 `print` found
-"jupyterlab/browser_check.py" = ["RUF012", "T201"]
+"pretzelai/browser_check.py" = ["RUF012", "T201"]
 # C901 method is too complex
-"jupyterlab/commands.py" = ["C901"]
+"pretzelai/commands.py" = ["C901"]
 # B028 No explicit `stacklevel` keyword argument found
-"jupyterlab/debuglog.py" = ["B028"]
-"jupyterlab/extensions/manager.py" = ["C901"]
+"pretzelai/debuglog.py" = ["B028"]
+"pretzelai/extensions/manager.py" = ["C901"]
 # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
 # T201 `print` found
-"jupyterlab/labapp.py" = ["RUF012", "T201"]
+"pretzelai/labapp.py" = ["RUF012", "T201"]
 # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
-"jupyterlab/labextensions.py" = ["RUF012"]
+"pretzelai/labextensions.py" = ["RUF012"]
 # C901 method is too complex
 # S101 Use of `assert` detected
 # N802 Function name `foo` should be lowercase
 # EM101 Exception must not use a string literal
 # PLR2004 Magic value used in comparison
-"jupyterlab/tests/*" = [
+"pretzelai/tests/*" = [
     "C901",
     "S101",
     "N802",
@@ -319,7 +319,7 @@ lint.ignore = [
     "PLR2004",
 ]
 # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
-"jupyterlab/tests/echo_kernel.py" = ["RUF012"]
+"pretzelai/tests/echo_kernel.py" = ["RUF012"]
 # T201 `print` found
 "scripts/milestone_check.py" = ["T201"]
 # N806 Variable `tM` in function should be lowercase
@@ -327,7 +327,7 @@ lint.ignore = [
 # PLC1901 test can be simplified as an empty string is falsey
 # PLR1714 Consider merging multiple comparisons
 # PLR5501 Use `elif` instead of `else` then `if`, to reduce indentation
-"jupyterlab/semver.py" = [
+"pretzelai/semver.py" = [
     "C901",
     "EM101",
     "EM102",
@@ -338,7 +338,7 @@ lint.ignore = [
     "PLR5501",
 ]
 # T201 `print` found
-"jupyterlab/upgrade_extension.py" = ["T201"]
+"pretzelai/upgrade_extension.py" = ["T201"]
 # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
 "packages/services/examples/node/main.py" = ["RUF012"]
 # T201 `print` found
