--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -22,4 +22,4 @@ nodeLinker: node-modules
 
 npmRegistryServer: "https://registry.yarnpkg.com"
 
-yarnPath: ./jupyterlab/staging/yarn.js
+yarnPath: ./pretzelai/staging/yarn.js
