--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@jupyterlab/completer": "workspace:^",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@typescript-eslint/eslint-plugin": "~6.13.2",
