--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "eslint-plugin-prettier": "~5.0.1",
     "eslint-plugin-react": "~7.33.2",
     "prettier": "~3.0.0",
+    "react-select": "^5.8.0",
     "stylelint": "^15.10.1",
     "stylelint-config-recommended": "^13.0.0",
     "stylelint-config-standard": "^34.0.0",
