--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -112,6 +112,7 @@
     "@jupyterlab/ui-components": "^4.2.0",
     "@lumino/commands": "^2.3.0",
     "@lumino/widgets": "^2.3.2",
+    "@mistralai/mistralai": "^0.5.0",
     "@mui/icons-material": "~5.15.18",
     "@mui/material": "^5.15.21",
     "monaco-editor": "^0.47.0",
