change copy and remove unused variable

--- a/packages/pretzelai-extension/tsconfig.json
+++ b/packages/pretzelai-extension/tsconfig.json
@@ -59,6 +59,9 @@
     },
     {
       "path": "../ui-components"
+    },
+    {
+      "path": "../mainmenu"
     }
   ],
   "extends": "../../tsconfigbase"
