--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -104,6 +104,7 @@
     "@jupyterlab/codemirror": "^4.2.0",
     "@jupyterlab/completer": "^4.2.0",
     "@jupyterlab/coreutils": "^6.2.0",
+    "@jupyterlab/mainmenu": "^4.2.0",
     "@jupyterlab/notebook": "^4.2.0",
     "@jupyterlab/outputarea": "^4.2.0",
     "@jupyterlab/rendermime": "^4.2.0",
