Better settings page and new future proof settings schema (#115)
Co-authored-by: Ramon Garate <ramon@withpretzel.com>

--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -96,12 +96,15 @@
     "@codemirror/language": "^6.10.1",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.26.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@jupyterlab/application": "^4.2.7",
     "@jupyterlab/apputils": "^4.3.0",
     "@jupyterlab/cells": "^4.2.0",
     "@jupyterlab/codemirror": "^4.2.0",
     "@jupyterlab/completer": "^4.2.0",
     "@jupyterlab/coreutils": "^6.2.0",
+    "@jupyterlab/mainmenu": "^4.2.0",
     "@jupyterlab/notebook": "^4.2.0",
     "@jupyterlab/outputarea": "^4.2.0",
     "@jupyterlab/rendermime": "^4.2.0",
@@ -110,8 +113,9 @@
     "@jupyterlab/ui-components": "^4.2.0",
     "@lumino/commands": "^2.3.0",
     "@lumino/widgets": "^2.3.2",
+    "@mistralai/mistralai": "^0.5.0",
     "@mui/icons-material": "~5.15.18",
-    "@mui/material": "~5.15.18",
+    "@mui/material": "^5.15.21",
     "monaco-editor": "^0.47.0",
     "openai": "^4.38.0",
     "posthog-js": "^1.130.2",
