--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -116,6 +116,8 @@
     "@mistralai/mistralai": "^0.5.0",
     "@mui/icons-material": "~5.15.18",
     "@mui/material": "^5.15.21",
+    "groq-sdk": "^0.5.0",
+    "lodash": "~4.17.21",
     "monaco-editor": "^0.47.0",
     "openai": "^4.38.0",
     "posthog-js": "^1.130.2",
