--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -98,7 +98,7 @@
     "@codemirror/view": "^6.26.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@jupyterlab/application": "^4.2.7",
+    "@jupyterlab/application": "^4.2.8",
     "@jupyterlab/apputils": "^4.3.0",
     "@jupyterlab/cells": "^4.2.0",
     "@jupyterlab/codemirror": "^4.2.0",
@@ -116,6 +116,8 @@
     "@mistralai/mistralai": "^0.5.0",
     "@mui/icons-material": "~5.15.18",
     "@mui/material": "^5.15.21",
+    "groq-sdk": "^0.5.0",
+    "lodash": "~4.17.21",
     "monaco-editor": "^0.47.0",
     "openai": "^4.38.0",
     "posthog-js": "^1.130.2",
