completion not showing up but the rest works

--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -92,6 +92,7 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.12",
+    "@codemirror/autocomplete": "^6.11.0",
     "@codemirror/commands": "^6.3.3",
     "@codemirror/language": "^6.10.1",
     "@codemirror/state": "^6.4.1",
