--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@jupyterlab/completer": "workspace:^",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@typescript-eslint/eslint-plugin": "~6.13.2",
@@ -122,6 +123,7 @@
     "eslint-plugin-jest": "~27.6.0",
     "eslint-plugin-prettier": "~5.0.1",
     "eslint-plugin-react": "~7.33.2",
+    "monaco-editor": "^0.50.0",
     "prettier": "~3.0.0",
     "stylelint": "^15.10.1",
     "stylelint-config-recommended": "^13.0.0",
