--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -115,6 +115,7 @@
     "@lumino/commands": "^2.3.0",
     "@lumino/widgets": "^2.3.2",
     "@mistralai/mistralai": "^0.5.0",
+    "@monaco-editor/react": "~4.6.0",
     "@mui/icons-material": "~5.15.18",
     "@mui/material": "^5.15.21",
     "codemirror": "^6.0.1",
