--- a/packages/pretzelai-extension/package.json
+++ b/packages/pretzelai-extension/package.json
@@ -95,6 +95,7 @@
     "@codemirror/autocomplete": "^6.15.0",
     "@codemirror/commands": "^6.3.3",
     "@codemirror/language": "^6.10.1",
+    "@codemirror/merge": "~6.6.7",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.26.0",
     "@emotion/react": "^11.11.4",
