--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "lint:check": "jlpm prettier:check && jlpm eslint:check && jlpm stylelint:check",
     "patch:release": "node buildutils/lib/patch-release.js",
     "prepare:python-release": "node buildutils/lib/prepare-python-release.js",
+    "prepare:python-release:no-git": "node buildutils/lib/prepare-python-release.js --no-git",
     "prepublish:check": "node buildutils/lib/prepublish-check.js",
     "prettier": "prettier --list-different --write \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "prettier:check": "prettier --check \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
