--- a/.github/workflows/build-wheels-all-platforms.yml
+++ b/.github/workflows/build-wheels-all-platforms.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install and build JavaScript dependencies
         run: |
-          jlpm prebuild:all
+          jlpm run prebuild:all
           jlpm install
           jlpm run build
 
