--- a/.github/workflows/build-wheels-all-platforms.yml
+++ b/.github/workflows/build-wheels-all-platforms.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: ['3.11.8']
         include:
           - os: ubuntu-latest
-            arch: x86_64
+            arch: x64
 
     steps:
       - uses: actions/checkout@v3
