--- a/.github/workflows/build-wheels-all-platforms.yml
+++ b/.github/workflows/build-wheels-all-platforms.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.11.8']
+        python-version: ['3.11.x']
         include:
           - os: ubuntu-latest
             arch: x64
