--- a/.github/workflows/build-wheels-all-platforms.yml
+++ b/.github/workflows/build-wheels-all-platforms.yml
@@ -11,11 +11,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python-version: ['3.11.x']
+        python-version: ['3.8.x', '3.9.x', '3.10.x', '3.11.x', '3.12.x']
         include:
           - os: ubuntu-latest
             arch: x64
+          - os: macos-latest
+            arch: x64
+          - os: macos-latest
+            arch: arm64
+          - os: windows-latest
+            arch: x64
+          - os: windows-latest
+            arch: x86
 
     steps:
       - uses: actions/checkout@v3
