--- a/.github/workflows/build-wheels-all-platforms.yml
+++ b/.github/workflows/build-wheels-all-platforms.yml
@@ -11,19 +11,20 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8.x', '3.9.x', '3.10.x', '3.11.x', '3.12.x']
+        # os: [ubuntu-latest, windows-latest, macos-latest]
+        # python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        # include:
+        #   - os: ubuntu-latest
+        #     platform: linux
+        #   - os: windows-latest
+        #     platform: win32
+        #   - os: macos-latest
+        #     platform: darwin
+        os: [macos-latest]
+        python-version: ['3.11.0']
         include:
-          - os: ubuntu-latest
-            arch: x64
           - os: macos-latest
-            arch: x64
-          - os: macos-latest
-            arch: arm64
-          - os: windows-latest
-            arch: x64
-          - os: windows-latest
-            arch: x86
+            platform: darwin
 
     steps:
       - uses: actions/checkout@v3
@@ -34,7 +35,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.arch }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -43,9 +43,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev,test]"
-          pip install hatchling
+          pip install -e .
 
       - name: Install and build JavaScript dependencies
         run: |
@@ -53,11 +51,28 @@ jobs:
           jlpm install
           jlpm run build
 
-      - name: Build wheel
+      - name: Build platform-specific wheels
         run: |
-          npm run prepare:python-release:no-git
+          npm run prepare:python-release:github-actions
 
       - uses: actions/upload-artifact@v3
         with:
           name: wheels
+          path: ./dist/*.whl
+
+  combine_wheels:
+    needs: build_wheels
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheels
+          path: ./dist
+
+      - name: Display structure of downloaded files
+        run: ls -R ./dist
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: combined-wheels
           path: ./dist/*.whl
