--- a/.github/workflows/build-wheels-all-platforms.yml
+++ b/.github/workflows/build-wheels-all-platforms.yml
@@ -42,20 +42,17 @@ jobs:
         run: |
           pip install -e ".[dev,test]"
 
-      - name: Install and build JavaScript dependencies
-        if: runner.os != 'Windows'
-        run: |
-          jlpm run prebuild:all
-          jlpm install
-          jlpm run build
-
       - name: Install and build JavaScript dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
           npm install -g yarn
-          yarn run prebuild:all
-          yarn install
-          yarn run build
+          New-Alias -Name jlpm -Value yarn
+
+      - name: Install and build JavaScript dependencies
+        run: |
+          jlpm run prebuild:all
+          jlpm install
+          jlpm run build
 
       - name: Build platform-specific wheels
         run: |
